versions/1.21/translated/ru_ru/develop/rendering/gui/custom-screens.md
---
title: Пользовательские экраны
description: Узнайте, как создавать собственные экраны для вашего мода.
authors:
  - IMB11

search: false
---

# Пользовательские экраны {#custom-screens}

:::info
Эта страница относится к обычным экранам, а не к управляемым — эти экраны открываются игроком на клиенте, а не те, которыми управляет сервер.
:::

Экраны по сути представляют собой графические интерфейсы, с которыми взаимодействует игрок, например, титульный экран, экран паузы и т. д.

Вы можете создавать собственные экраны для отображения пользовательского контента, пользовательского меню настроек и многого другого.

## Создание экрана {#creating-a-screen}

Чтобы создать экран, вам необходимо расширить класс `Screen` и переопределить метод `init` (при желании вы также можете переопределить метод `render`), но обязательно вызовите его super метод, иначе он не отобразит фон, виджеты и т. д.

Вам следует принять к сведению, что:

- Виджеты не создаются в конструкторе, поскольку на тот момент экран еще не инициализирован, а некоторые переменные, такие как `width` и `height`, еще недоступны или неточны.
- Метод `init` вызывается при инициализации экрана, и это лучшее место для создания виджетов.
  - Виджеты добавляются с помощью метода `addDrawableChild`, который принимает любой отрисовываемый виджет.
- Метод `render` вызывается в каждом кадре — из этого метода можно получить доступ к контексту отрисовки и положению мыши.

В качестве примера мы можем создать простой экран с кнопкой и меткой над ней.

@[code lang=java transcludeWith=:::1](@/reference/1.21/src/client/java/com/example/docs/rendering/screens/CustomScreen.java)

![Пользовательский экран 1](/assets/develop/rendering/gui/custom-1-example.png)

## Открытие экрана {#opening-the-screen}

Вы можете открыть экран с помощью метода `setScreen` `MinecraftClient` — это можно сделать из многих мест, например, с помощью привязки клавиш, команды или обработчика пакетов клиента.

```java
MinecraftClient.getInstance().setScreen(
  new CustomScreen(Text.empty())
);
```

## Закрытие экрана {#closing-the-screen}

Если вы хотите закрыть экран, просто установите экран в значение `null`:

```java
MinecraftClient.getInstance().setScreen(null);
```

Если вы хотите проявить изюминку и вернуться к предыдущему экрану, вы можете передать текущий экран в конструктор `CustomScreen` и сохранить его в поле, а затем использовать его для возврата к предыдущему экрану при вызове метода `close`.

@[code lang=java transcludeWith=:::2](@/reference/1.21/src/client/java/com/example/docs/rendering/screens/CustomScreen.java)

Теперь при открытии пользовательского экрана вы можете передать текущий экран в качестве второго аргумента — тогда при вызове `CustomScreen#close` произойдет возврат к предыдущему экрану.

```java
Screen currentScreen = MinecraftClient.getInstance().currentScreen;
MinecraftClient.getInstance().setScreen(
  new CustomScreen(Text.empty(), currentScreen)
);
```
