versions/26.1.2/translated/ru_ru/develop/rendering/gui/custom-screens.md
---
title: Пользовательские экраны
description: Узнайте, как создавать собственные экраны для вашего мода.
authors:
  - IMB11
---

<!---->

::: info

Эта страница относится к обычным экранам, а не к меню — эти экраны открываются игроком на клиенте, а не те, которыми управляет сервер.

:::

Экраны по сути представляют собой графические интерфейсы, с которыми взаимодействует игрок, например, титульный экран, экран паузы и т. д.

Вы можете создавать собственные экраны для отображения пользовательского контента, пользовательского меню настроек и многого другого.

## Создание экрана {#creating-a-screen}

Чтобы создать экран, вам необходимо расширить класс `Screen` и переопределить метод `init` (при желании вы также можете переопределить метод `extractRenderState`), но обязательно вызовите его super метод, иначе он не отобразит фон, виджеты и т. д.

Вам следует принять к сведению, что:

- Виджеты не создаются в конструкторе, поскольку на тот момент экран еще не инициализирован, а некоторые переменные, такие как `width` и `height`, еще недоступны или неточны.
- Метод `init` вызывается при инициализации экрана, и это лучшее место для создания виджетов.
  - Виджеты добавляются с помощью метода `addRenderableWidget`, который принимает любой отрисовываемый виджет.
- Метод `extractRenderState` вызывается в каждом кадре — из этого метода можно получить доступ к контексту GUI и положению мыши.

В качестве примера мы можем создать простой экран с кнопкой и меткой над ней.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/screens/CustomScreen.java#screen

![Пользовательский экран 1](/assets/develop/rendering/gui/custom-1-example.png)

## Открытие экрана {#opening-the-screen}

Вы можете открыть экран с помощью внутреннего метода `setScreen` — это можно сделать из многих мест, например, с помощью привязки клавиш, команды или обработчика пакетов клиента.

```java
Minecraft.getInstance().setScreen(
  new CustomScreen(Component.empty())
);
```

## Закрытие экрана {#closing-the-screen}

Если вы хотите закрыть экран, просто установите экран в значение `null`:

```java
Minecraft.getInstance().setScreen(null);
```

Если вы хотите проявить изюминку и вернуться к предыдущему экрану, вы можете передать текущий экран в конструктор `CustomScreen` и сохранить его в поле, а затем использовать его для возврата к предыдущему экрану при вызове метода `close`.

<<< @/reference/26.1.2/src/client/java/com/example/docs/rendering/screens/CustomScreen.java#return_to_previous_screen

Теперь при открытии пользовательского экрана вы можете передать текущий экран в качестве второго аргумента — тогда при вызове `CustomScreen#close` произойдет возврат к предыдущему экрану.

```java
Screen currentScreen = Minecraft.getInstance().currentScreen;
Minecraft.getInstance().setScreen(
  new CustomScreen(Component.empty(), currentScreen)
);
```
